--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="utf-8" />
-	<title>Mi primera Web Dinámica</title>
+	<title>Pulse: Comunidad de gente pro [renzoMx]</title>
 	<link rel="stylesheet" href="normalize.css" />
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="estilos.css" />
