Iconos de tipografía y arreglos múltiples de diseño

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
 		<h1 id="titulo_header">Pul3: Comunidad de gente cool, atractiva y millonaria.</h1>
 		<figure id="avatar">
 			<img src="avatar.jpg" />
-			<figcaption>
-				*
-			</figcaption>
+			<figcaption></figcaption>
 		</figure>
 	</header>
 	<nav>
 		<ul>
-			<li id="flechita_nav"><a href="#">*</a></li>
+			<li id="flechita_nav"><a href="#"></a></li>
 			<li><a href="#">Python</a></li>
 			<li><a href="#">HTML5</a></li>
 			<li><a href="#">Javascript</a></li>
@@ -47,17 +45,17 @@
 				<a class="tag_item" href="#">Categoria</a>
 				<span class="fecha_item">Hace 5 min</span>
 				<a class="comentarios_item" href="#">455</a>
-				<a class="guardar_item" href="#">*</a>
+				<a class="guardar_item" href="#"></a>
 			</p>
 			<p class="votacion">
-				<a class="up" href="#">U</a> 
+				<a class="up" href="#"></a> 
 				3141
-				<a class="down" href="#">D</a> 
+				<a class="down" href="#"></a> 
 			</p>
 		</article>
 	</section>
 	<footer>
-		<p>Powered by RenzoMX</p>
+		<p>Powered by RenzoMx</p>
 		<p>Mejorando.la 2013 ®</p>
 	</footer>
 </body>
