--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="es">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1" />
 	<title>Pulse: Comunidad de gente pro [renzoMx]</title>
 	<link rel="stylesheet" href="normalize.css" />
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="estilos.css" />
+	<link rel="stylesheet" href="responsive.css" />
 	<script type="text/javascript" src="modernizr.custom.14438.js"></script>
 </head>
 <body>
@@ -30,7 +32,123 @@
 			<li id="publicar_nav"><a href="#">Publicar</a></li>
 		</ul>
 	</nav>
+	<aside id="bienvenida">
+		<h2>Hola, registrate!</h2>
+		<p>Es importante registrarte porque LOL!</p>
+		<a id ="registro" href="#">Registrate aca!</a>
+		<p id="mensaje_registro">En serio, registrate por favor</p>
+	</aside>
 	<section id="contenido">
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">4 tendencias web para el 2014 y 4 que ya deberías dominar</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">RenzoMx Díaz</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">Categoria</a>
+				<span class="fecha_item">Hace 5 min</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a> 
+				3141
+				<a class="down" href="#"></a> 
+			</p>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">4 tendencias web para el 2014 y 4 que ya deberías dominar</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">RenzoMx Díaz</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">Categoria</a>
+				<span class="fecha_item">Hace 5 min</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a> 
+				3141
+				<a class="down" href="#"></a> 
+			</p>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">4 tendencias web para el 2014 y 4 que ya deberías dominar</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">RenzoMx Díaz</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">Categoria</a>
+				<span class="fecha_item">Hace 5 min</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a> 
+				3141
+				<a class="down" href="#"></a> 
+			</p>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">4 tendencias web para el 2014 y 4 que ya deberías dominar</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">RenzoMx Díaz</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">Categoria</a>
+				<span class="fecha_item">Hace 5 min</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a> 
+				3141
+				<a class="down" href="#"></a> 
+			</p>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">4 tendencias web para el 2014 y 4 que ya deberías dominar</a>
+			</h2>
+			<p class="autor_item">
+				Por <a href="#">RenzoMx Díaz</a>
+			</p>
+			<p class="datos_item">
+				<a class="tag_item" href="#">Categoria</a>
+				<span class="fecha_item">Hace 5 min</span>
+				<a class="comentarios_item" href="#">455</a>
+				<a class="guardar_item" href="#"></a>
+			</p>
+			<p class="votacion">
+				<a class="up" href="#"></a> 
+				3141
+				<a class="down" href="#"></a> 
+			</p>
+		</article>
 		<article class="item">
 			<figure class="imagen_item">
 				<img src="imagen.jpg" />
