--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</p>
 			<p class="datos_item">
 				<a class="tag_item" href="#">Categoria</a>
-				<span class="fecha_item">Hace 5 min</span>
+				<span class="fecha_item">Hace <strong>5</strong> min</span>
 				<a class="comentarios_item" href="#">455</a>
 				<a class="guardar_item" href="#"></a>
 			</p>
@@ -73,7 +73,7 @@
 			</p>
 			<p class="datos_item">
 				<a class="tag_item" href="#">Categoria</a>
-				<span class="fecha_item">Hace 5 min</span>
+				<span class="fecha_item">Hace <strong>5</strong> min</span>
 				<a class="comentarios_item" href="#">455</a>
 				<a class="guardar_item" href="#"></a>
 			</p>
@@ -95,7 +95,7 @@
 			</p>
 			<p class="datos_item">
 				<a class="tag_item" href="#">Categoria</a>
-				<span class="fecha_item">Hace 5 min</span>
+				<span class="fecha_item">Hace <strong>5</strong> min</span>
 				<a class="comentarios_item" href="#">455</a>
 				<a class="guardar_item" href="#"></a>
 			</p>
@@ -117,7 +117,7 @@
 			</p>
 			<p class="datos_item">
 				<a class="tag_item" href="#">Categoria</a>
-				<span class="fecha_item">Hace 5 min</span>
+				<span class="fecha_item">Hace <strong>5</strong> min</span>
 				<a class="comentarios_item" href="#">455</a>
 				<a class="guardar_item" href="#"></a>
 			</p>
@@ -139,7 +139,7 @@
 			</p>
 			<p class="datos_item">
 				<a class="tag_item" href="#">Categoria</a>
-				<span class="fecha_item">Hace 5 min</span>
+				<span class="fecha_item">Hace <strong>5</strong> min</span>
 				<a class="comentarios_item" href="#">455</a>
 				<a class="guardar_item" href="#"></a>
 			</p>
@@ -161,7 +161,7 @@
 			</p>
 			<p class="datos_item">
 				<a class="tag_item" href="#">Categoria</a>
-				<span class="fecha_item">Hace 5 min</span>
+				<span class="fecha_item">Hace <strong>5</strong> min</span>
 				<a class="comentarios_item" href="#">455</a>
 				<a class="guardar_item" href="#"></a>
 			</p>
