Slider para el modelo desktop

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 			<li id="publicar_nav"><a href="#">Publicar</a></li>
 		</ul>
 	</nav>
+	<figure id="slider">
+		<img src="foto.jpg" width="100%" />
+		<figcaption id="descripcion-slider">
+			<span class="votaciones">
+				<a class="arriba" href="#"></a>
+				<p class="puntos"><strong>45</strong></p>
+				<a class="abajo" href="#"></a>
+			</span>
+			<span class="separacion">
+				<h2 class="titulo-slider">4 tendencias web para el 2014 y 4 que ya deberías dominar</h2>
+				<p class="by">Por: <a href="#">RenzoMx</a></p>
+			</span>
+		</figcaption>
+	</figure>
 	<aside id="bienvenida">
 		<h2>Hola, registrate!</h2>
 		<p>Es importante registrarte porque LOL!</p>
