--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
 			<li id="publicar_nav"><a href="#">Publicar</a></li>
 		</ul>
 	</nav>
+	<section id="slider">
+		<article id="slider-inner">
+			<figure id="imagen">
+				<img src="ashley.jpg" width="100%"/>
+			</figure>
+			<figcaption class="descripcion">
+				<div class="votar">
+					<a class="up-vote" href="#"></a>
+					<p>45</p>
+					<a class="down-vote" href="#"></a>
+				</div>
+				<div class="text-slider">
+					<h2 class="titulo-slider">Ashley Greene: Fue nominada a la Actriz mas hermosa del mundo por aparicion en crepusculo</h2>
+					<p class="by">Por: <span class="orange">RenzoMx</span></p>
+				</div>
+			</figcaption>
+		</article>
+	</section>
 	<aside id="bienvenida">
 		<h2>Hola, registrate!</h2>
 		<p>Es importante registrarte porque LOL!</p>
